# tracemem

./: .env.example  .gitignore  LICENSE  Makefile  PRD.md  README.md  docker-compose.yml  pyproject.toml
tracemem-installer/: README.md  pyproject.toml
tracemem-installer/src/tracemem_installer/: __init__.py  cli.py  install.py  settings.py  uninstall.py
tracemem-installer/src/tracemem_installer/templates/: SKILL.md  config.yaml
tracemem-installer/src/tracemem_installer/templates/tracemem_claude/: __init__.py  cli.py  config.py  formatters.py
tracemem_core/: Makefile  README.md  pyproject.toml
tracemem_core/docs/: architecture.md  configuration.md  index.md  retrieval.md
tracemem_core/examples/: 01_quickstart.ipynb  02_retrieval_configs.ipynb  03_custom_extractors.ipynb  04_graph_exploration.ipynb  langchain_import.ipynb  langsmith_import.ipynb
tracemem_core/src/tracemem_core/: __init__.py  config.py  extractors.py  messages.py  tracemem.py
tracemem_core/src/tracemem_core/adapters/: __init__.py  langchain.py  protocol.py
tracemem_core/src/tracemem_core/embedders/: __init__.py  openai.py  protocol.py
tracemem_core/src/tracemem_core/models/: __init__.py  edges.py  nodes.py
tracemem_core/src/tracemem_core/retrieval/: __init__.py  hybrid.py  protocol.py  results.py
tracemem_core/src/tracemem_core/storage/: __init__.py  protocols.py
tracemem_core/src/tracemem_core/storage/graph/: neo.py  (+2 more)
tracemem_core/tests/: conftest.py  test_adapters.py  test_extractors.py  test_models.py  test_retrieval.py  test_tracemem.py  test_trajectory.py
tracemem_core/tests/integration/: test_common.py  test_extractor_modes.py  test_kuzu_integration.py  test_local_mode.py  test_neo4j.py  test_vector_recall.py
tracemem_core/tests/storage/graph/: test_kuzu.py  test_neo.py
tracemem_core/tests/storage/vector/: test_lance.py  test_rerankers.py
(+26 files in other folders)
