[project]
name = "tracemem-claude"
version = "0.1.2"
description = "TraceMem — memory hooks installer for Claude Code"
readme = "README.md"
authors = [
    { name = "Itay Verkh", email = "itay1542@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
tracemem-claude = "tracemem_installer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracemem_installer"]
