[project]
name = "tracemem-core"
version = "0.1.1"
description = "Knowledge graph memory system for AI agents"
readme = "README.md"
authors = [
    { name = "Itay Verkh", email = "itay1542@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "kuzu>=0.8.0",
    "lancedb>=0.4.0",
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.6.0",
]

[project.optional-dependencies]
neo4j = ["neo4j>=5.15.0"]
examples = [
    "jupyter>=1.0.0",
    "networkx>=3.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tracemem_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "openai: tests that require OPENAI_API_KEY environment variable",
    "neo4j: tests that require Neo4j database",
    "kuzu: tests that use embedded Kuzu database (no Docker required)",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.2.0",
    "langchain-core>=1.2.8",
]
